--- a/TrainingUploads.ipynb
+++ b/TrainingUploads.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {
     "metadata": {}
    },
@@ -51,7 +51,7 @@
     "valid_dir = Path(os.path.join(data_dir, \"valid\"))\n",
     "diseases = os.listdir(train_dir)\n",
     "jpg_train_files = list(Path(train_dir).rglob('*/*.jpg'))\n",
-    "len(jpg_train_files) #70295"
+    "len(jpg_train_files) "
    ]
   },
   {
@@ -268,7 +268,7 @@
     "    plt.imshow(np.squeeze(img_array.numpy().astype(\"uint8\")))\n",
     "    plt.title(f\"Class Predicted: {class_title}\")\n",
     "    plt.axis(\"off\")\n",
-    "    plt.show()"
+    "    plt.savefig(\"ProcessedImage.png\")\n"
    ]
   },
   {
